--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header>
   <div class="logo">
-    <img src="<img src="imageslogo.jpg" alt="Logo Mode2Me">" alt="Logo Mode2Me" />
+    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
   </div>
 
   <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
