--- a/compte.html
+++ b/compte.html
@@ -9,31 +9,36 @@
 <body>
 
   <header>
-    <div class="logo">
-      <img src="images/logo.jpg" alt="Logo Mode2Me" />
-      <span>Mode<span class="two">2</span>Me</span>
-    </div>
+  <div class="logo">
+    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
+  </div>
 
+  <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
+
+  <nav id="main-nav">
+    <a href="index.html" class="active">Accueil</a>
+    <a href="boutique.html">Boutique</a>
+    <div class="dropdown">
+      <button aria-haspopup="true" aria-expanded="false">Catégories ▾</button>
+      <div class="dropdown-content" aria-label="Sous-menu Catégories">
+        <a href="vetements.html">Vêtements</a>
+        <a href="accessoires.html">Accessoires</a>
+        <a href="sacs.html">Sacs</a>
+        <a href="beaute.html">Beauté</a>
+      </div>
+    </div>
+    <a href="apropos.html">À propos</a>
+    <a href="contact.html">Contact</a>
+    <a href="panier.html">Panier</a>
+    <a href="compte.html">Mon Compte</a>
+    <a href="faq.html">FAQ</a>
+    <a href="politique-confidentialite.html">Politique de confidentialité</a>
     <form action="recherche.html" method="get" class="search-form" role="search">
       <input type="search" name="q" placeholder="Rechercher..." aria-label="Rechercher un produit" />
-      <button type="submit" aria-label="Rechercher">
-        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 0 24 24" width="18" fill="currentColor">
-          <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16a6.471 6.471 0 004.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C8.01 14 6 11.99 6 9.5S8.01 5 10.5 5 15 7.01 15 9.5 12.99 14 10.5 14z"/>
-        </svg>
-      </button>
+      <button type="submit" aria-label="Rechercher">🔍</button>
     </form>
-
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="boutique.html">Boutique</a>
-      <a href="apropos.html">À propos</a>
-      <a href="contact.html">Contact</a>
-      <a href="panier.html">Panier</a>
-      <a href="compte.html" class="active">Mon Compte</a>
-      <a href="faq.html">FAQ</a>
-      <a href="politique-confidentialite.html">Politique de confidentialité</a>
-    </nav>
-  </header>
+  </nav>
+</header>
 
   <section class="compte">
     <h2>Mon Compte</h2>
