--- a/vetements.html
+++ b/vetements.html
@@ -15,18 +15,18 @@
 
 <header>
   <div class="logo">
-    <img src="images/logo.jpg" alt="Logo Mode2Me" />
+    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
   </div>
 
   <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
 
   <nav id="main-nav">
-    <a href="index.html">Accueil</a>
+    <a href="index.html" class="active">Accueil</a>
     <a href="boutique.html">Boutique</a>
     <div class="dropdown">
       <button aria-haspopup="true" aria-expanded="false">Catégories ▾</button>
-      <div class="dropdown-content">
-        <a href="vetements.html" class="active">Vêtements</a>
+      <div class="dropdown-content" aria-label="Sous-menu Catégories">
+        <a href="vetements.html">Vêtements</a>
         <a href="accessoires.html">Accessoires</a>
         <a href="sacs.html">Sacs</a>
         <a href="beaute.html">Beauté</a>
@@ -38,9 +38,9 @@
     <a href="compte.html">Mon Compte</a>
     <a href="faq.html">FAQ</a>
     <a href="politique-confidentialite.html">Politique de confidentialité</a>
-    <form action="recherche.html" method="get" class="search-form">
-      <input type="search" name="q" placeholder="Rechercher..." />
-      <button type="submit">🔍</button>
+    <form action="recherche.html" method="get" class="search-form" role="search">
+      <input type="search" name="q" placeholder="Rechercher..." aria-label="Rechercher un produit" />
+      <button type="submit" aria-label="Rechercher">🔍</button>
     </form>
   </nav>
 </header>
