--- a/boutique.html
+++ b/boutique.html
@@ -16,14 +16,14 @@
 
 <header>
   <div class="logo">
-    <img src="images/logo.jpg" alt="Logo Mode2Me" />
+    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
   </div>
 
   <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
 
   <nav id="main-nav">
-    <a href="index.html">Accueil</a>
-    <a href="boutique.html" class="active">Boutique</a>
+    <a href="index.html" class="active">Accueil</a>
+    <a href="boutique.html">Boutique</a>
     <div class="dropdown">
       <button aria-haspopup="true" aria-expanded="false">Catégories ▾</button>
       <div class="dropdown-content" aria-label="Sous-menu Catégories">
