--- a/panier.html
+++ b/panier.html
@@ -47,6 +47,10 @@
 
 <main>
   <h1>Votre Panier</h1>
+  <main>
+  <h1>Votre panier</h1>
+  <div id="contenu-panier"></div>
+</main>
   <div id="cart-items"></div>
   <div class="total" id="cart-total">Total : 0 €</div>
   <button class="checkout-btn">Valider la commande</button>
