--- a/panier.html
+++ b/panier.html
@@ -5,23 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mode2Me - Panier</title>
 
-  <!-- Police élégante -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
-
-  <!-- Lien vers le CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
   <div class="logo">
-    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
+    <img src="images/logo.jpg" alt="Logo Mode2Me" />
   </div>
 
   <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
 
   <nav id="main-nav">
-    <a href="index.html" class="active">Accueil</a>
+    <a href="index.html">Accueil</a>
     <a href="boutique.html">Boutique</a>
     <div class="dropdown">
       <button aria-haspopup="true" aria-expanded="false">Catégories ▾</button>
@@ -34,7 +31,7 @@
     </div>
     <a href="apropos.html">À propos</a>
     <a href="contact.html">Contact</a>
-    <a href="panier.html">Panier</a>
+    <a href="panier.html" class="active">Panier</a>
     <a href="compte.html">Mon Compte</a>
     <a href="faq.html">FAQ</a>
     <a href="politique-confidentialite.html">Politique de confidentialité</a>
@@ -47,11 +44,7 @@
 
 <main>
   <h1>Votre Panier</h1>
-  <main>
-  <h1>Votre panier</h1>
   <div id="contenu-panier"></div>
-</main>
-  <div id="cart-items"></div>
   <div class="total" id="cart-total">Total : 0 €</div>
   <button class="checkout-btn">Valider la commande</button>
 </main>
@@ -60,8 +53,6 @@
   <p>&copy; 2025 Mode2Me. Tous droits réservés.</p>
 </footer>
 
-<!-- Script JS -->
 <script src="script.js"></script>
-
 </body>
 </html>
