--- a/panier.html
+++ b/panier.html
@@ -44,7 +44,9 @@
 
 <main>
   <h1>Votre Panier</h1>
-  <div id="contenu-panier"></div>
+  <div id="contenu-panier">
+    <!-- Le contenu du panier sera injecté ici par script.js -->
+  </div>
   <div class="total" id="cart-total">Total : 0 €</div>
   <button class="checkout-btn">Valider la commande</button>
 </main>
