--- a/contact.html
+++ b/contact.html
@@ -38,96 +38,63 @@
 <body>
 
 <header>
-  <div class="logo">
-    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
-  </div>
-
-  <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
-
   <nav id="main-nav">
-    <a href="index.html" class="active">Accueil</a>
-    <a href="boutique.html">Boutique</a>
-    <div class="dropdown">
-      <button aria-haspopup="true" aria-expanded="false">Catégories ▾</button>
-      <div class="dropdown-content" aria-label="Sous-menu Catégories">
-        <a href="vetements.html">Vêtements</a>
-        <a href="accessoires.html">Accessoires</a>
-        <a href="sacs.html">Sacs</a>
-        <a href="beaute.html">Beauté</a>
-      </div>
-    </div>
-    <a href="apropos.html">À propos</a>
-    <a href="contact.html">Contact</a>
-    <a href="panier.html">Panier</a>
-    <a href="compte.html">Mon Compte</a>
-    <a href="faq.html">FAQ</a>
-    <a href="politique-confidentialite.html">Politique de confidentialité</a>
-    <form action="recherche.html" method="get" class="search-form" role="search">
-      <input type="search" name="q" placeholder="Rechercher..." aria-label="Rechercher un produit" />
-      <button type="submit" aria-label="Rechercher">🔍</button>
-    </form>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="contact.html" class="active">Contact</a></li>
+      <li><a href="produits.html">Produits</a></li>
+      <li><a href="panier.html">Panier</a></li>
+    </ul>
   </nav>
 </header>
 
 <main>
   <h1>Contactez-nous</h1>
 
-  <form id="contact-form" action="https://usebasin.com/f/3fffffcdf2bc" method="POST" aria-label="Formulaire de contact">
-    <label for="nom">Nom complet</label>
-    <input type="text" id="nom" name="nom" required placeholder="Votre nom complet" />
+  <!-- Formulaire de contact -->
+  <form id="contact-form" action="#" method="POST">
+    <label for="nom">Nom :</label><br />
+    <input type="text" id="nom" name="nom" required /><br /><br />
 
-    <label for="email">Adresse e-mail</label>
-    <input type="email" id="email" name="email" required placeholder="exemple@domaine.com" />
+    <label for="email">Email :</label><br />
+    <input type="email" id="email" name="email" required /><br /><br />
 
-    <label for="message">Votre message</label>
-    <textarea id="message" name="message" required placeholder="Écrivez votre message ici..."></textarea>
+    <label for="message">Message :</label><br />
+    <textarea id="message" name="message" rows="5" required></textarea><br /><br />
 
     <button type="submit">Envoyer</button>
   </form>
 
-  <div class="confirmation-message" id="confirmation-message">
-    ✅ Merci ! Votre message a bien été envoyé.<br />
-    <button id="btn-retour" type="button">Retour à l'accueil</button>
+  <div class="confirmation-message" id="confirmation">
+    Merci pour votre message, nous vous répondrons bientôt.
+    <br />
+    <button id="btn-retour">Retour au formulaire</button>
   </div>
 </main>
 
-<footer>
-  <p>&copy; 2025 Mode2Me. Tous droits réservés.</p>
-  <p>Suivez-nous sur <a href="#">Instagram</a>, <a href="#">Facebook</a></p>
-</footer>
-
 <script>
+document.addEventListener('DOMContentLoaded', () => {
   const form = document.getElementById('contact-form');
-  const confirmation = document.getElementById('confirmation-message');
+  const confirmation = document.getElementById('confirmation');
   const btnRetour = document.getElementById('btn-retour');
 
-  form.addEventListener('submit', function(e) {
-    e.preventDefault(); // Empêche le rechargement
-    const formData = new FormData(form);
+  form.addEventListener('submit', (e) => {
+    e.preventDefault();
 
-    fetch(form.action, {
-      method: 'POST',
-      body: formData,
-      headers: {
-        'Accept': 'application/json'
-      }
-    })
-    .then(response => {
-      if (response.ok) {
-        form.reset();
-        confirmation.style.display = 'block';
-      } else {
-        alert("Une erreur s'est produite. Veuillez réessayer.");
-      }
-    })
-    .catch(error => {
-      alert("Erreur réseau. Vérifiez votre connexion.");
-    });
+    // Ici tu peux ajouter l'envoi du formulaire (Ajax, fetch, ou autre)
+    // Pour l'exemple, on simule juste l'envoi
+
+    form.style.display = 'none';
+    confirmation.style.display = 'block';
   });
 
   btnRetour.addEventListener('click', () => {
-    window.location.href = 'index.html'; // chemin vers ta page d'accueil
+    confirmation.style.display = 'none';
+    form.style.display = 'block';
   });
+
+  // Ton code JavaScript additionnel peut venir ici
+});
 </script>
 
 </body>
