--- a/contact.html
+++ b/contact.html
@@ -16,85 +16,96 @@
       border: 1px solid #c3e6cb;
       border-radius: 5px;
       font-weight: bold;
-      text-align: center;
-    }
-    #btn-retour {
-      margin-top: 12px;
-      padding: 10px 18px;
-      background-color: #155724;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: 600;
-      font-family: 'Playfair Display', serif;
-      transition: background-color 0.3s ease;
-    }
-    #btn-retour:hover {
-      background-color: #0b3b12;
     }
   </style>
 </head>
 <body>
 
 <header>
+  <div class="logo">
+    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
+  </div>
+
+  <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
+
   <nav id="main-nav">
-    <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
-      <li><a href="produits.html">Produits</a></li>
-      <li><a href="panier.html">Panier</a></li>
-    </ul>
+    <a href="index.html" class="active">Accueil</a>
+    <a href="boutique.html">Boutique</a>
+    <div class="dropdown">
+      <button aria-haspopup="true" aria-expanded="false">Catégories ▾</button>
+      <div class="dropdown-content" aria-label="Sous-menu Catégories">
+        <a href="vetements.html">Vêtements</a>
+        <a href="accessoires.html">Accessoires</a>
+        <a href="sacs.html">Sacs</a>
+        <a href="beaute.html">Beauté</a>
+      </div>
+    </div>
+    <a href="apropos.html">À propos</a>
+    <a href="contact.html">Contact</a>
+    <a href="panier.html">Panier</a>
+    <a href="compte.html">Mon Compte</a>
+    <a href="faq.html">FAQ</a>
+    <a href="politique-confidentialite.html">Politique de confidentialité</a>
+    <form action="recherche.html" method="get" class="search-form" role="search">
+      <input type="search" name="q" placeholder="Rechercher..." aria-label="Rechercher un produit" />
+      <button type="submit" aria-label="Rechercher">🔍</button>
+    </form>
   </nav>
 </header>
 
 <main>
   <h1>Contactez-nous</h1>
 
-  <!-- Formulaire de contact -->
-  <form id="contact-form" action="#" method="POST">
-    <label for="nom">Nom :</label><br />
-    <input type="text" id="nom" name="nom" required /><br /><br />
+  <form id="contact-form" action="https://usebasin.com/f/3fffffcdf2bc" method="POST" aria-label="Formulaire de contact">
+    <label for="nom">Nom complet</label>
+    <input type="text" id="nom" name="nom" required placeholder="Votre nom complet" />
 
-    <label for="email">Email :</label><br />
-    <input type="email" id="email" name="email" required /><br /><br />
+    <label for="email">Adresse e-mail</label>
+    <input type="email" id="email" name="email" required placeholder="exemple@domaine.com" />
 
-    <label for="message">Message :</label><br />
-    <textarea id="message" name="message" rows="5" required></textarea><br /><br />
+    <label for="message">Votre message</label>
+    <textarea id="message" name="message" required placeholder="Écrivez votre message ici..."></textarea>
 
     <button type="submit">Envoyer</button>
   </form>
 
-  <div class="confirmation-message" id="confirmation">
-    Merci pour votre message, nous vous répondrons bientôt.
-    <br />
-    <button id="btn-retour">Retour au formulaire</button>
+  <div class="confirmation-message" id="confirmation-message">
+    ✅ Merci ! Votre message a bien été envoyé.
   </div>
 </main>
 
+<footer>
+  <p>&copy; 2025 Mode2Me. Tous droits réservés.</p>
+  <p>Suivez-nous sur <a href="#">Instagram</a>, <a href="#">Facebook</a></p>
+</footer>
+
 <script>
-document.addEventListener('DOMContentLoaded', () => {
   const form = document.getElementById('contact-form');
-  const confirmation = document.getElementById('confirmation');
-  const btnRetour = document.getElementById('btn-retour');
+  const confirmation = document.getElementById('confirmation-message');
 
-  form.addEventListener('submit', (e) => {
-    e.preventDefault();
+  form.addEventListener('submit', function(e) {
+    e.preventDefault(); // Empêche le rechargement
+    const formData = new FormData(form);
 
-    // Ici tu peux ajouter l'envoi du formulaire (Ajax, fetch, ou autre)
-    // Pour l'exemple, on simule juste l'envoi
-
-    form.style.display = 'none';
-    confirmation.style.display = 'block';
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    })
+    .then(response => {
+      if (response.ok) {
+        form.reset();
+        confirmation.style.display = 'block';
+      } else {
+        alert("Une erreur s'est produite. Veuillez réessayer.");
+      }
+    })
+    .catch(error => {
+      alert("Erreur réseau. Vérifiez votre connexion.");
+    });
   });
-
-  btnRetour.addEventListener('click', () => {
-    confirmation.style.display = 'none';
-    form.style.display = 'block';
-  });
-
-  // Ton code JavaScript additionnel peut venir ici
-});
 </script>
 
 </body>
