--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 <header>
   <div class="logo">
-    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
+    <img src="https://github.com/mode2me/mon-nouveau-site/blob/main/imageslogo.jpg" alt="Logo Mode2Me" />
   </div>
 
   <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
