--- a/contact.html
+++ b/contact.html
@@ -123,13 +123,13 @@
 
 <header>
   <div class="logo">
-    <img src="imageslogo.jpg" alt="Logo Mode2Me" style="height: 60px;" />
+    <img src="imageslogo.jpg" alt="Logo Mode2Me" />
   </div>
 
-  <button id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">&#9776;</button>
+  <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
 
-  <nav id="main-nav" role="navigation" aria-label="Menu principal">
-    <a href="index.html">Accueil</a>
+  <nav id="main-nav">
+    <a href="index.html" class="active">Accueil</a>
     <a href="boutique.html">Boutique</a>
     <div class="dropdown">
       <button aria-haspopup="true" aria-expanded="false">Catégories ▾</button>
@@ -141,7 +141,7 @@
       </div>
     </div>
     <a href="apropos.html">À propos</a>
-    <a href="contact.html" class="active" aria-current="page">Contact</a>
+    <a href="contact.html">Contact</a>
     <a href="panier.html">Panier</a>
     <a href="compte.html">Mon Compte</a>
     <a href="faq.html">FAQ</a>
