--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,8 @@
   <h1>Contactez-nous</h1>
   <p>Une question ? Un message ? Nous sommes là pour vous répondre.</p>
 
-  <form action="envoyer-contact.php" method="post" class="contact-form">
+  <!-- Formulaire avec action Basin -->
+  <form action="https://usebasin.com/f/3fffffcdf2bc" method="post" class="contact-form">
     <div class="form-group">
       <label for="nom">Nom *</label>
       <input type="text" id="nom" name="nom" required placeholder="Votre nom complet" />
