--- a/compte.html
+++ b/compte.html
@@ -57,8 +57,8 @@
         <label for="fullname">Nom complet</label>
         <input type="text" id="fullname" name="fullname" value="Mohamed Manawi" required />
         
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" value="mohamed@example.com" required />
+       <p> <label for="email">Email</label>
+        <input type="email" id="email" name="email" value="mohamed@example.com" required /></p>
         
         <label for="phone">Téléphone</label>
         <input type="tel" id="phone" name="phone" value="+33 6 12 34 56 78" required />
