--- a/compte.html
+++ b/compte.html
@@ -63,8 +63,8 @@
         <label for="phone">Téléphone</label>
         <input type="tel" id="phone" name="phone" value="+33 6 12 34 56 78" required />
         
-        <button type="submit">Enregistrer</button>
-        <button type="button" onclick="hideEditForm()">Annuler</button>
+        <p><button type="submit">Enregistrer</button></p>
+        <p><button type="button" onclick="hideEditForm()">Annuler</button></p>
       </form>
     </div>
 
